--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-config.py
+token.py
+report.xlsx
+report.csv
 ~$butuhan Visit CTB Data Chatbot Telegram Telkom.docx
 /Scripts
 /Include
@@ -6,4 +8,3 @@ pyvenv.cfg
 /Lib
 .idea
 /res
-report.csv
