--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ idna==2.8
 jdcal==1.4.1
 kiwisolver==1.1.0
 matplotlib==3.1.3
+mysql-connector==2.2.9
 numpy==1.18.1
 openpyxl==3.0.3
 pandas==0.25.3
