--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ token_telegram.py
 report.xlsx
 report.csv
 ~$butuhan Visit CTB Data Chatbot Telegram Telkom.docx
+/deploy
 /Scripts
 /Include
 pyvenv.cfg
